# IoTClientServer_EmbeddedLinuxProject

./: README.md
CommApp/CommAppQT/: .gitignore  CMakeLists.txt  Channel.h  CircularGauge.qml  Gauge.qml  Makefile  Socket.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
CommApp/CommAppQT (Copy)/: Channel.h  Gauge.qml  Makefile  Photos.qrc  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.ui
CommApp/CommAppYocto/yocto/poky/conf/: .local.conf.swp  bblayers.conf  local.conf
CommApp/CommAppYocto/yocto/poky/meta-myLayer/: README  README.md
CommApp/CommAppYocto/yocto/poky/meta-myLayer/conf/: layer.conf
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-connectivity/network-config/: network-config_1.0.bb
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-connectivity/network-config/files/: 10-eth0.network
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-core/images/: core-image-minimal.bbappend  iot-client-image.bb
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-core/packagegroups/: packagegroup-iot-client.bb
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-iot/iot-client/: iot-client_1.0.bb
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-iot/iot-client/files/: CMakeLists.txt  Channel.h  Socket.h  client_main.cpp  iot-client.conf  iot-client.service
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-myApp/iot-client/: iot-client_1.0.bb
CommApp/CommAppYocto/yocto/poky/meta-myLayer/recipes-myApp/iot-client/files/: CMakeLists.txt  iot-client.conf  iot-client.service  main.cpp
CommApp/CommAppYocto/yocto/poky/rpi-build/conf/: bblayers.conf  local.conf
